Add profile table

--- a/metric_backend/pom.xml
+++ b/metric_backend/pom.xml
@@ -157,7 +157,14 @@
           <generator>
             <database>
               <includes>.*</includes>
-              <inputSchema>metrics</inputSchema>
+              <schemata>
+                <schema>
+                  <inputSchema>metrics</inputSchema>
+                </schema>
+                <schema>
+                  <inputSchema>requests</inputSchema>
+                </schema>
+              </schemata>
             </database>
             <target>
               <packageName>uk.ac.ic.doc.np1815.jooq</packageName>
