--- a/playground_application/requirements.txt
+++ b/playground_application/requirements.txt
@@ -2,3 +2,7 @@ connexion == 1.1.15
 python_dateutil == 2.6.0
 setuptools >= 21.0.0
 elastic-apm[flask]
+certifi >= 14.05.14
+six >= 1.10
+setuptools >= 21.0.0
+urllib3 >= 1.15.1
