Correctly parse PyFlame profiles

--- a/metric_backend/pom.xml
+++ b/metric_backend/pom.xml
@@ -278,6 +278,12 @@
       <version>9.1-901-1.jdbc4</version>
     </dependency>
 
+    <dependency>
+        <groupId>com.google.guava</groupId>
+        <artifactId>guava</artifactId>
+        <version>27.0.1-jre</version>
+    </dependency>
+
   </dependencies>
   <repositories>
     <repository>
