--- a/metric_backend/src/main/webapp/WEB-INF/web.xml
+++ b/metric_backend/src/main/webapp/WEB-INF/web.xml
@@ -11,6 +11,7 @@
             <param-value>
                 io.swagger.jaxrs.listing,
                 io.swagger.sample.resource,
+                io.swagger.v3.jaxrs2.integration.resources,
                 org.openapitools.api
             </param-value>
         </init-param>
@@ -34,28 +35,32 @@
         </init-param>
         <init-param>
             <param-name>swagger.api.title</param-name>
-            <param-value>OpenAPI Server</param-value>
+            <param-value>Feedback Driven Development</param-value>
         </init-param>
         <init-param>
             <param-name>swagger.api.basepath</param-name>
-            <param-value>http://example.com</param-value>
+            <param-value>http://localhost:8080/api</param-value>
         </init-param>
 
         <load-on-startup>2</load-on-startup>
     </servlet>
+
     <servlet>
         <servlet-name>Bootstrap</servlet-name>
         <servlet-class>org.openapitools.api.Bootstrap</servlet-class>
         <load-on-startup>2</load-on-startup>
     </servlet>
+
     <servlet-mapping>
         <servlet-name>jersey</servlet-name>
-        <url-pattern>/*</url-pattern>
+        <url-pattern>/api/*</url-pattern>
     </servlet-mapping>
+
     <filter>
         <filter-name>ApiOriginFilter</filter-name>
         <filter-class>org.openapitools.api.ApiOriginFilter</filter-class>
     </filter>
+
     <filter-mapping>
         <filter-name>ApiOriginFilter</filter-name>
         <url-pattern>/*</url-pattern>
