--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ metric_backend/src/gen
 !metric_backend/src/gen/openapi/.openapi-generator-ignore
 playground_application/metric_backend_client
 playground_application/.openapi-generator
-
+playground_application/scripts
 
 Created by https://www.gitignore.io/api/python,intellij
 # Edit at https://www.gitignore.io/?templates=python,intellij
