--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@ scripts/outputs
 .DS_Store
 metric_backend/src/gen
 !metric_backend/src/gen/openapi/.openapi-generator-ignore
-playground_application/metric_backend_client
-playground_application/.openapi-generator
+feedback_wrapper/metric_backend_client
+feedback_wrapper/.openapi-generator
 playground_application/scripts
 
 Created by https://www.gitignore.io/api/python,intellij
