--- a/playground_application/.gitignore
+++ b/playground_application/.gitignore
@@ -1,3 +1,10 @@
+# Project-specific
+.openapi*
+__pycache__
+.idea
+metric_backend_client
+scripts
+
 
 # Created by https://www.gitignore.io/api/intellij,intellij+iml
 # Edit at https://www.gitignore.io/?templates=intellij,intellij+iml
