--- a/feedback_plugin/src/main/resources/META-INF/plugin.xml
+++ b/feedback_plugin/src/main/resources/META-INF/plugin.xml
@@ -12,6 +12,7 @@
     </description>
 
     <depends>com.intellij.modules.lang</depends>
+    <depends>Git4Idea</depends>
 
     <extensions defaultExtensionNs="com.intellij">
         <applicationService serviceImplementation="np1815.feedback.plugin.actions.MetricsBackendService"/>
